Wed Sep 27 17:14:24 PDT 2006

No major changes besides optimizations.

[0.3.6]

Wed Sep 27 14:09:51 PDT 2006

For the record fastfp.c speeds things up:

a	0.018043	0.008506
d159	0.036936	0.032183
d201	0.061202	0.054291
d224	0.071792	0.062762
e	0.099502	0.099407
f	0.191747	0.192391

I wrote fasterfp.c that is the same except for a flag that records when
the element is zero. This avoids calls to memset and memcmp/mpn_cmp,
which helps some pairing types:

a	0.018096	0.008508
d159	0.033794	0.029067
d201	0.054982	0.047947
d224	0.064952	0.055632
e	0.099624	0.099479
f	0.140706	0.140583

tinyfp.c now work.

field_init_fp() checks field size and calls appropriate init function.
Can also change default Fp so the old implementations of Fp can still
be used.

Wed Sep 27 01:55:00 PDT 2006

I've been using cmake for a while now, as it's faster than autotools.
I've finally added the CMakeLists.txt file to the git repository,
and will include it in the next release.

I only just tested a cg-export tree for the first time.
It turns out my old CMakeLists.txt was broken for a while.
I did not realize NAMES and PATHS in find_library() command
were case-sensitive. I'll have to test cg-exported trees more often.

Tue Sep 26 23:12:36 PDT 2006

fastfp.c: fp_set() is slower than the version in naivefp.c,
probably because it uses memset() while GMP uses assembly.

fp_square() is also slower, probably because it does not
have access to GMP's mpn_mul_n() low-level function.

fp_set0(), fp_set1() are also much slower, but most applications
shouldn't need them inner loops.

Can use GMP internals to use GMP assembly routines, but not for fp_set0
and fp_set1.

Mon Sep 25 18:33:27 PDT 2006

An alternative implementation of fp, fastfp.c, works now. In the process
I fixed code that assumed the data field of element_t to be an mpz_t.

Some pairing types benefit:

a	0.018461	0.008570
d159	0.036698	0.032024
d201	0.060269	0.053314
d224	0.072389	0.062961
e	0.100093	0.100459
f	0.301455	0.301296
